local PBT orchestrator, multi-deck training, bug fixes, ONNX export
Major changes:
- Local PBT orchestrator (scripts/run_local_pbt.py) for training without HPC
- Multi-deck standard model (Pauper-Standard profile: Rally, Affinity, Elves, Wildfire)
- Meta opponent sampler (case "meta": cross-deck RL vs RL matchups)
- Self-play opponent sampler (case "self": same-model self-play)
- ONNX export infrastructure (onnx_export.py, trt_inference.py, SingleHeadScorer)
- Split-device GPU mode (cuda:0=infer, cuda:1=train)
- Score worker round-robin fix (balanced load across profiles)
- Score worker auto-scaler fix (_score_worker_threads_raw check)
- Drain-all-profiles-per-cycle optimization
- Async tensor transfers (non_blocking=True)
- Batched NaN checks (torch.isfinite)
- 3 parallel train workers with per-profile exclusion
- Mulligan model keep bias (prevents always-mulligan collapse)
- Fresh deck loading for opponent (fixes shared card reference / 14-card bug)
- Game logger fix for trainAll mode (createInProfileDir)
- First 20 games logged immediately for sanity checking
- Fixed entropy/exploration decay schedules for 500K episode runs
- Concurrent eval (no training pause during evaluation)
- GPU service restart on eval to flush leaked connections
- Auto-satellite submission from orchestrator
- Virtual thread support (USE_VIRTUAL_THREADS env var)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>